--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -1,1 +1,34 @@
 @charset "UTF-8";
+
+/* CSS DO CABEÇALHO */
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+#menu ul {
+    background-color: black;
+    display: flex;
+    justify-content: center;
+
+}
+
+#menu li {
+    list-style: none;
+}
+
+#menu a {
+    text-decoration: none;
+    color: white;
+    padding: 15px 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 18pt;
+}
+
+#menu a:hover {
+    background-color: aqua;
+    transition: background .3s;
+}
