--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,24 @@
 @charset "UTF-8";
+
+main {
+    padding: 20px;
+    text-align: center;
+    align-self: center;
+}
+
+.caixa_geral>div {
+    height: 100px;
+    width: 100px;
+    border: solid 1px;
+    margin: 10px;
+    display: inline-block;
+    background-image: linear-gradient(to left, #a6a6a6, #e9e9e9);
+}
+
+.caixa_geral {
+    min-height: 250px;
+    max-width: 700px;
+    min-width: 130px;
+    border: solid 1px;
+    background-color:rgb(209, 227, 255);
+}
