feat: new page foto

--- a/css/rodape.css
+++ b/css/rodape.css
@@ -26,3 +26,8 @@ main {
     position: static;
     bottom: 0;
 }
+
+#footer p{
+    font-size: 18px;
+    font-family: 'Times New Roman', Times, serif;
+}
