--- a/css/tema1.css
+++ b/css/tema1.css
@@ -1,5 +1,11 @@
 @charset "UTF-8";
 
+@font-face {
+    font-family: "koulen";
+    src: url("../fonts/koulen-regular-webfont.woff") format("woff"),
+        url("../fonts/koulen-regular-webfont.woff2") format("woff2");
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -11,6 +17,8 @@
     background-color: #dcdcdc;
     text-align: center;
     padding: 10px;
+    font-family: koulen;
+
 }
 
 .tag {
@@ -46,4 +54,29 @@ p {
 
 .tag_section {
     margin: 20px 0;
+}
+
+#link:link {
+    background-color: #58e8e5;
+}
+
+#hover:hover {
+    background-color: #f5ef4d;
+}
+
+#active:active {
+    background-color: blue;
+}
+
+#visidet:visited {
+    background-color: violet;
+}
+
+#focus:focus {
+    background-color: yellow;
+    color: rgb(0, 0, 0);
+}
+
+#apresentacao{
+    font-family: preconnect;
 }
